# funzionante

./: CMakeLists.txt  install.sh
resources/: main.cpp  main1.cpp
